--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="happy">Happy</string>
     <string name="disappointed">Disappointed</string>
     <string name="no_statistics_available">No statistics available</string>
+    <string name="please_sign_in">Please, sign in</string>
 </resources>
